--- a/mini-vertx/webroot/index.html
+++ b/mini-vertx/webroot/index.html
@@ -19,7 +19,7 @@
       </div>
       <form id="form1">
          <input id="msg" type="text" size =35 class="inset"/>
-         <input type="submit" class= "inset" value="envoyer" />  
+         <input type="submit" class= "inset example" value="envoyer" />  
       </form>
    </body>
 </html>
