--- a/webroot/chat.html
+++ b/webroot/chat.html
@@ -63,7 +63,7 @@
                      <a href="#" class="user-link">
                      <img src="assets/images/avatar.png" width="55" alt="" class="img-circle" />
                      <span>Bonjour,</span>
-                     <strong>Rojo</strong>
+                     <div id="user"></div>
                      </a>
                   </div>
                   <div class="sui-hover inline-links animate-in">
